# tqc-emu

./: .gitmodules  .pre-commit-config.yaml  Cargo.toml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
docs/: CONTRIBUTING.md
python/tests/: test_all.py
python/tqc_emu/: __init__.py
src/: anyon.rs  braiding.rs  error.rs  lib.rs  state.rs  util.rs
src/braiding/: braiding.rs
src/fusion/: fusion.rs
src/lattice/: lattice.rs
src/util/: basis.rs  error.rs  math.rs  state.rs  statevec.rs
