[package]
name = "tqc-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tqc_emu"
crate-type = ["cdylib"]

[dependencies]
qiskit-parser = { path = "qiskit-parser" }
nalgebra = "0.32"
numpy = "0.21"
pyo3 = "0.21.0"
lazy_static = "1.5.0"
lattices = "0.5.8"
