[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tqc-emu"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["F405", "F403"]
exclude = [
    "build",
    "dist",
    "venv",
    ".venv"
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tools/ignore.py" = ["F401"]
"python/anyon_braiding_simulator/__init__.py" = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["python/tqc_emu"]
